Fix logo alignment and navbar styling

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5705,6 +5705,12 @@ nav ul li.dropdown > a > i {
   }
   
 }
-
+.navbar-brand {
+  margin-right: auto !important;
+  margin-left: 0 !important;
+  padding-left: 0;
+  display: flex;
+  align-items: center;
+}
 
 
